# sldb

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  test_cases.txt
.github/workflows/: c-cpp.yml
include/: File.h  basic_frame.h  file_api.h
src/: local.cmake  sldb.cpp
src/database/: database.cpp  database.h
src/database/buffermanager/: buffer_manager.cpp  buffer_manager.h  buffer_replacement.cpp  buffer_replacement.h
src/database/datastructures/: indexing.cpp  indexing.h
src/storage/: advanced_frame.h  basic_frame.h  fsi_segment.cpp  segment.h  slotted_page.cpp  slotted_page.h  sp_segment.cpp  sp_segment.h
tests/: file_test.cc  local.cmake  replacement_test.cc  slotted_page_test.cpp  tester.cpp  tester.hpp
